# war0hm-qfusion

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md
.circleci/: config.yml
.github/workflows/: build.yml  semgrep.yml  slr.yml
assets/: dedicated_autoexec.cfg  default.cfg  default_binds_kbmouse.cfg
assets/data0_21/huds/: classic.hud
assets/data0_21pure/glsl_nri/: defaultCelshade.frag.glsl  defaultCelshade.res.glsl  defaultCelshade.vert.glsl  defaultColorCorrection.frag.glsl  defaultColorCorrection.vert.glsl  defaultDistortion.frag.glsl  defaultDistortion.res.glsl  defaultDistortion.vert.glsl  defaultFXAA.frag.glsl  defaultFXAA.res.glsl  defaultFXAA.vert.glsl  defaultFog.frag.glsl  defaultFog.vert.glsl  defaultMaterial.frag.glsl  defaultMaterial.res.glsl  defaultMaterial.vert.glsl  defaultOutline.frag.glsl  defaultOutline.res.glsl  defaultOutline.vert.glsl  defaultQ3AShader.frag.glsl  defaultQ3AShader.res.glsl  defaultQ3AShader.vert.glsl  defaultRGBShadow.frag.glsl  defaultRGBShadow.vert.glsl  defaultShadowmap.frag.glsl  defaultShadowmap.fragment.glsl  defaultShadowmap.res.glsl  defaultShadowmap.vert.glsl  defaultYUV.frag.glsl  defaultYUV.vert.glsl
assets/data0_21pure/scripts/: noir.shader  scifi_interior.shader
assets/map_return/scripts/: return.shader
source/: CMakeLists.txt  CMakePresets.json  dev_symlinks.sh  package_assets.cmake  vcpkg.json
source/cgame/: cg_chat.cpp  cg_cmds.cpp  cg_democams.cpp  cg_effects.cpp  cg_events.cpp  cg_hud.cpp  cg_local.h  cg_main.cpp  cg_media.cpp  cg_players.cpp  cg_pmodels.cpp  cg_public.h  cg_scoreboard.cpp  cg_screen.cpp  cg_syscalls.cpp  cg_syscalls.h  cg_teams.cpp  cg_wmodels.cpp  ref.h
source/cin/: CMakeLists.txt
source/client/: CMakeLists.txt  cl_game.c  cl_input.c  cl_main.c  cl_parse.c  cl_presence.c  cl_screen.c  cl_sound.c  cl_steam.c  cl_ui.c  cl_vid.c  client.h  console.c  ftlib.c  ftlib.h  keys.c
source/client/win/: sdl_win.c  win32_glw.c
source/cmake/: OutputDirectory.cmake  QfusionUtils.cmake
source/ftlib/: CMakeLists.txt  ftlib.c  ftlib_draw.c  ftlib_local.h  ftlib_main.c  ftlib_public.h
source/game/: g_ascript.cpp  g_callvotes.cpp  g_cmds.cpp  g_frame.cpp  g_gametypes.cpp  g_local.h  g_main.cpp  g_public.h  g_spawn.cpp  g_syscalls.h  g_web.cpp
source/gameshared/: gs_pmove.c  q_arch.h  q_comref.h  q_math.c  q_math.h  q_sds.h  q_shared.c  q_shared.h
source/gameshared/q_math/: q_math.h  q_math_common.h  q_vector_math.h
source/gameshared/vecmath/: CMakeLists.txt  vectormath.h  vectormath_common.h
source/gameshared/vecmath/scalar/: vector.h  vector.inl  vectormath.h
source/gameshared/vecmath/test/: vector_test.c
source/qcommon/: CMakeLists.txt  autoupdate.c  cmd.c  common.c  cvar.c  cvar.h  dynvar.c  files.c  mem.c  mem.h  mlist.c  mod_cmd.h  mod_cvar.h  mod_fs.h  mod_mem.h  mod_win.h  msg.c  net.c  qcommon.h  snap_write.c  steam.c  steam.h  version.h
source/qcommon/test/: mem_test.c
source/qcore/: CMakeLists.txt  qarch.h  qhash.h  qscratch_alloc.c  qscratch_alloc.h  qstr.c  qstr.h  qstr_utf.c  qstr_utf.h  qtypes.h
source/qcore/math/: qmath.h
source/qcore/test/: qstr_test.c  qstr_utf_test.c  scratch_alloc_test.c
source/ref_base/: CMakeLists.txt  r_math.c  r_math.h  r_public.h  r_texture_buf.h  r_texture_format.c  r_texture_format.h
source/ref_gl/: CMakeLists.txt  qgl.h  r_alias.c  r_backend.c  r_backend.h  r_backend_local.h  r_backend_program.c  r_cin.c  r_cmdque.c  r_cull.c  r_image.c  r_imagelib.c  r_light.c  r_local.h  r_main.c  r_mesh.c  r_model.c  r_model.h  r_program.c  r_program.h  r_public.c  r_q3bsp.c  r_register.c  r_scene.c  r_shader.c  r_shader.h  r_skin.c  r_skm.c  r_sky.c  r_vbo.c
source/ref_nri/: CMakeLists.txt  qgl.c  qgl.h  r_alias.c  r_backend.c  r_backend.h  r_backend_local.h  r_backend_program.c  r_block_buffer_pool.c  r_block_buffer_pool.h  r_capture.c  r_capture.h  r_cin.c  r_cmdque.c  r_cmdque.h  r_cmds.c  r_descriptor_pool.c  r_descriptor_pool.h  r_device.h  r_frame_cmd_buffer.c  r_frame_cmd_buffer.h  r_framebuffer.c  r_frontend.c  r_frontend.h  r_glimp.h  r_gpu_ring_buffer.c  r_gpu_ring_buffer.h  r_graphics.c  r_graphics.h  r_hasher.h  r_image.c  r_image.h  r_imagelib.c  r_imagelib.h  r_light.c  r_local.h  r_main.c  r_mesh.c  r_mesh.h  r_model.c  (+49 more)
source/sdl/: sdl_glw.c  sdl_snd.c  sdl_win.c  sdl_win.h
source/server/: CMakeLists.txt  server.h  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_oob.c  sv_steam.c
source/snd_openal/: CMakeLists.txt
source/steamshim/: CMakeLists.txt
source/steamshim/src/: mod_steam.h  packet_utils.h  pipe.cpp  steamshim.h  steamshim_private.h  steamshim_types.h
source/tv_server/: CMakeLists.txt  tv_downstream_oob.c
source/ui/: CMakeLists.txt  ui_precompiled.h  ui_public.cpp  ui_public.h
source/ui/as/: as_bind_datasource.cpp  as_bind_dom.cpp  as_bind_game.cpp  as_bind_mm.cpp  as_bind_options.cpp  as_bind_url.cpp  as_bind_window.cpp  asbind.h  asui.h  asui_local.h  asui_scriptdocument.cpp  asui_scriptevent.cpp  asui_url.h
source/ui/datasources/: ui_blockedplayers_datasource.cpp  ui_blockedplayers_datasource.h  ui_demos_datasource.cpp  ui_demos_datasource.h  ui_friends_datasource.cpp  ui_friends_datasource.h  ui_gameajax_datasource.cpp  ui_gameajax_datasource.h  ui_gametypes_datasource.cpp  ui_gametypes_datasource.h  ui_huds_datasource.cpp  ui_huds_datasource.h  ui_maps_datasource.cpp  ui_maps_datasource.h  ui_models_datasource.cpp  ui_models_datasource.h  ui_mods_datasource.cpp  ui_mods_datasource.h  ui_profiles_datasource.cpp  ui_profiles_datasource.h  ui_serverbrowser_datasource.cpp  ui_serverbrowser_datasource.h  ui_tvchannels_datasource.cpp  ui_tvchannels_datasource.h  ui_video_datasource.cpp  ui_video_datasource.h
source/ui/decorators/: ui_decorators.h  ui_gradient_decorator.cpp  ui_ninepatch_decorator.cpp
source/ui/formatters/: ui_colorcode_formatter.h  ui_crosshair_formatter.h  ui_datetime_formatter.h  ui_duration_formatter.h  ui_empty_formatter.h  ui_filetype_formatter.h  (+3 more)
source/unix/: unix_console.c  unix_fs.c
source/win32/: win_console.c  win_fs.c  win_glw2.c
(+105 files in other folders)
